# Khaled

./: .env.example  .env.new  .gitignore  .replit  .replit_binance_workflow.txt  AGENT_API_IMPLEMENTATION.md  AGENT_API_SOLUTION.md  AGENT_DEPLOYMENT.md  AGENT_DEPLOYMENT.md.bak  AGENT_FILE_OPERATIONS.md  AGENT_INTEGRATION_PR.md  AGENT_README.md  AGENT_SERVER_SETUP.md  API.md  AUTONOMOUS_AGENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_OVERVIEW.txt  EUROPEAN_DEPLOYMENT_ASSESSMENT.md  INSTALLATION.md  ML_DATA_README.md  ML_SYSTEM_OVERVIEW.md  Makefile  OPENAI_AGENT_CAPABILITIES.md  PACKAGES.md  PROXY_SETUP.md  README.md  REPLIT_README.md  admin-login-direct-test.js  agent-api-scan-results.json  agent-api-usage-example.cjs  agent-autonomous-example.js  agent-chat-test.js  agent-cli.js  agent-client.cjs  agent-complete.js  agent-enhanced-examples.js  agent-example.cjs  agent-file-listing.js  agent-file-operation-example.js  agent-file-utils.js  (+343 more)
.workflow/: ai_signal_service
agent/: agent.ts  agent_created_file.js  agent_example_task.js  agent_file_access_test.js  agent_file_test.js  agent_openai_test.js  logger.ts  notifications.ts  openai_generated_util.js  repair.ts  start.ts  test_file_operations.js  tsconfig.json  types.ts
agent-examples-output/: config.json  simple-output.txt
attached_assets/: Pasted--AI-Agent-Hi-I-1743709929610.txt  Pasted--Hi-I-ve-identified-the-root-cause-of-the-OpenAI-Agent-issue-in-our-project-and-I-d-like-you-to-a-1743883596062.txt  Pasted--Replit-AI-Agent--1743883538620.txt  Pasted--Task-Title-XGBoost-Optimization-Strategy-Impact-System-Objective-Enhance-the-AI-trading--1744066981830.txt  Pasted--Use-the-correct-method-to-save-the-code-to-a-file-file-path-mnt-data-useAssetPricing-ts-code-1743195624195.txt  Pasted--XGBoost--1744066919910.txt  Webshare 3 proxies 3.txt  Webshare 5 proxies.txt  (+4 more)
cleanup_dirs_example/: README.md
src/: hooks  (+8 more)
(+775 files in other folders)
