[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "binance-connector>=3.12.0",
    "ccxt>=4.4.70",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.14.0",
    "websocket-client>=1.8.0",
]
