[project]
name = "crypto-trade"
version = "1.0.0"
description = "CryptoTrade: Advanced Cryptocurrency Trading Platform with AI-powered trading strategies"
authors = [
    {name = "CryptoTrade Team", email = "support@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "binance-connector>=3.12.0",
    "ccxt>=4.4.70",
    "cryptography>=44.0.2",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "imbalanced-learn>=0.13.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.14.0",
    "websocket-client>=1.8.0",
    "xgboost>=3.0.0",
]
